# sonic

./: .gitignore  Cargo.toml  README.md
src/: config.rs  discord_announcer.rs  discord_client.rs  discovery_generator.rs  error.rs  lib.rs  main.rs  message_processor.rs  models.rs  playlist_manager.rs  scheduler.rs  spotify_client.rs  utils.rs
