[package]
name = "sonic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "^1.0"
serde_derive = "1.0"
serde_json = "1.0"
bincode = "^1.3"
result = "1.0.0"
reqwest = { version = "0.11.17", features = ["blocking", "json"] }
open = "4.1.0"

[[bin]]
name = "sonic"
path = "src/main.rs"
