[package]
name = "sonic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "^1.3"
result = "1.0.0"
reqwest = { version = "0.11.17", features = ["blocking", "json"] }
open = "4.1.0"
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread", "signal"] }
serenity = { default-features = false, features = ["client", "gateway", "model", 
          "rustls_backend"], version = "0.11.5"}
url = "2.3.1"
base64 = "0.21.0"
log = "0.4.17"
env_logger = "0.10"
rspotify = "0.13.1"
thiserror = "1.0"
rand = "0.8"
regex = "1.10"
tokio-cron-scheduler = "0.10"
dotenv = "0.15"

[[bin]]
name = "sonic"
path = "src/main.rs"

[[bin]]
name = "integration_test"
path = "src/bin/integration_test.rs"

[[bin]]
name = "config_test"
path = "src/bin/config_test.rs"

[[bin]]
name = "get_spotify_token"
path = "src/bin/get_spotify_token.rs"

[[bin]]
name = "generate_discovery"
path = "src/bin/generate_discovery.rs"

[[bin]]
name = "test_playlists"
path = "src/bin/test_playlists.rs"

[[bin]]
name = "test_recommendations"
path = "src/bin/test_recommendations.rs"
